package com.directi.training.lsp.exercise_refactored;

public interface Switchable
{
    void turnOn();

    void turnOff();

    boolean isOn();
}
